--- a/views/partials/search-modal.ejs
+++ b/views/partials/search-modal.ejs
@@ -29,7 +29,7 @@
       </div>
       <hr>
         <div class="btn-box">
-          <a href="/"><button id="cancle-btn" class="cancle-btn btn">Cancle</button></a>
+          <a href="/"><button id="cancle-btn" class="cancle-btn btn">Cancel</button></a>
           <button id="continue-btn" style="display: none;"  class="search-btn btn">Continue</button>
             <button id="search-btn" class="search-btn btn">Search</button>
             
