--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,7 @@
     <link rel="shortcut icon" href="/icons/x-icon.jpg" type="image/x-icon"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oclock UI</title>
+    <link rel="stylesheet" href="<%=baseUrl%>/profile.css" />
     <link rel="stylesheet" href="<%=baseUrl%>/style.css" />
     <link rel="stylesheet" href="<%=baseUrl%>/modal.css" />
     <link rel="stylesheet" href="<%=baseUrl%>/responsive.css" />
